<resources>
    <string name="app_name">Digiment</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    //nav drawer
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="subject1">Subject1</string>
    <string name="subject2">Subject2</string>
    <string name="subject3">Subject3</string>
    <string name="subject4">Subject4</string>
    <string name="l1">L1</string>
    <string name="l2">L2</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>

    //timeline
    <string name="sub">S1</string>
    <string name="assg_1">Assignment 1</string>
    <string name="submit">Submit</string>
    <string name="date">Date</string>

    //homepage
    <string name="C1">Computer Science and Engineering</string>
    <string name="C2">Information Technology</string>
    <string name="C3">Computer Organisation</string>
    <string name="C4">Computer Science and Information Technology</string>
    <string name="C1_1">CSE</string>
    <string name="C2_2">IT</string>
    <string name="C3_3">CO</string>
    <string name="C4_4">CSI</string>

    //sign_up
    <string name="sign_in">Sign In</string>
    //profile
    <string name="name">Name</string>
    <string name="branch">Branch</string>
    <string name="roll_no">Roll No.</string>
    <string name="lib_id">Library Id</string>
    <string name="section">Section</string>
    <string name="Mobile_no">Mobile No.</string>
    <string name="email">Email Id</string>
    <string name="dob">DOB</string>
    <string name="Father_name">Father\'s Name</string>
    <string name="Mother_name">Mother\'s Name</string>
    <string name="address">Address</string>
    <string name="res_status">Residential Status: </string>
    <string name="hosteler">Hosteler</string>
    <string name="day_scholar">Day Scholar</string>
    <string name="save">Save</string>

    //subject_dash
    <string name="assignments">Assignments</string>
    <string name="course_outcome">Course Outcome</string>
    <string name="Syllabus">Syllabus</string>
    <string name="labs">Labs</string>
    <string name="Tuts">Tutorials</string>
    <string name="study_material">Study Material</string>

    //add assignment
    <string name="Submit">Submit</string>
    <string name="grades">Grades</string>
</resources>
