<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Home">
    <!--tools:showIn="@layout/app_bar_home">-->



    <RelativeLayout
        android:id="@+id/base_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardBackgroundColor="@color/colorPrimary" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_cse"
        android:layout_below="@+id/base_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/subject"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/curved_button"
            android:gravity="center_vertical"
            android:text="@string/sub"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/assignment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/subject"
            android:text="@string/assg_1"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/date_of_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/subject"
            android:layout_below="@+id/assignment"
            android:text="@string/date"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="19sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/subject"
            android:layout_below="@+id/date_of_submit"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>



</RelativeLayout>